--- a/src/main/resources/email.css
+++ b/src/main/resources/email.css
@@ -1,33 +1,6 @@
 /* MVP.css v1.1 - https://github.com/andybrewer/mvp */
 
-:root {
-    --border-radius: 5px;
-    --box-shadow: 2px 2px 10px;
-    --color: #118bee;
-    --color-accent: #118bee0b;
-    --color-bg: #fff;
-    --color-bg-secondary: #e9e9e9;
-    --color-secondary: #920de9;
-    --color-secondary-accent: #920de90b;
-    --color-shadow: #f4f4f4;
-    --color-text: #000;
-    --color-text-secondary: #999;
-    --hover-brightness: 1.2;
-    --justify-important: center;
-    --justify-normal: left;
-    --line-height: 150%;
-    --width-card: 285px;
-    --width-card-medium: 460px;
-    --width-card-wide: 800px;
-    --width-content: 1080px;
-}
-
 /* Layout */
-article aside {
-    background: var(--color-secondary-accent);
-    border-left: 4px solid var(--color-secondary);
-    padding: 0.01rem 0.01rem;
-}
 
 body {
     background: var(--color-bg);
@@ -39,9 +12,10 @@ body {
     padding: 0.5rem 0;
 }
 
-footer,
-header,
-main {
+.footer,
+.header,
+main,
+body {
     margin: 0 auto;
     max-width: var(--width-content);
     padding: 0.5rem 0.25rem;
@@ -51,56 +25,67 @@ hr {
     background-color: var(--color-bg-secondary);
     border: none;
     height: 1.5px;
-    margin: 1rem 0;
+    width: 50%;
+    margin: 0.5rem auto;
 }
 
-section {
-    display: flex;
-    flex-wrap: wrap;
+.section {
+    width: 100%;
     justify-content: var(--justify-important);
 }
 
-section aside {
-    border: 1px solid var(--color-bg-secondary);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow) var(--color-shadow);
-    margin: 0.5rem;
-    padding: 1rem;
-    width: var(--width-card-medium);
+.section .aside {
+    justify-content: var(--justify-important);
+    text-align: start;
+    padding: 0.5rem;
 }
 
-section aside:hover {
+.section .aside:hover {
     box-shadow: var(--box-shadow) var(--color-bg-secondary);
 }
 
-section aside img {
+.section .aside img {
     max-width: 100%;
 }
 
-/* Headers */
-article header,
-div header,
-main header {
+/* .headers */
+article .header,
+div .header,
+main .header {
     padding-top: 0;
 }
 
-header {
-    text-align: var(--justify-important);
+.header, .footer {
+    width: 100%;
+    text-align: center;
+    color: #edf2f4;
+    background-color: #2b2d42;
 }
 
-header a b,
-header a em,
-header a i,
-header a strong {
+.header p {
+    color: #8d99ae;
+}
+
+.footer p {
+    color: #8d99ae;
+}
+.footer b {
+    color: #8d99ae;
+}
+
+.header a b,
+.header a em,
+.header a i,
+.header a strong {
     margin-left: 1rem;
     margin-right: 1rem;
 }
 
-header nav img {
+.header nav img {
     margin: 1rem 0;
 }
 
-section header {
+.section .header {
     padding-top: 0;
     width: 100%;
 }
@@ -137,7 +122,7 @@ samp {
 }
 
 details {
-    margin: 1.3rem 0;
+    margin: 1rem 0;
 }
 
 details summary {
@@ -149,11 +134,13 @@ details summary:focus {
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+ h2,
+ h3,
+ h4,
+ h5,
+ h6{
+    margin: 0;
+    text-align: center;
     line-height: var(--line-height);
 }
 
@@ -188,15 +175,7 @@ small {
 }
 
 sup {
-    background-color: var(--color-secondary);
-    border-radius: var(--border-radius);
-    color: var(--color-bg);
-    font-size: xx-small;
-    font-weight: bold;
-    margin: 0.2rem;
-    padding: 0.2rem 0.3rem;
-    position: relative;
-    top: -2px;
+    color: var(--color-text-secondary);
 }
 
 /* Links */
@@ -217,10 +196,10 @@ a i,
 a strong,
 button {
     border-radius: var(--border-radius);
-    display: inline-block;
     font-size: medium;
+    display: block;
     font-weight: bold;
-    margin: 1.5rem 0 0.5rem 0;
+    margin: 0.5rem auto;
     padding: 1rem 2rem;
 }
 
@@ -232,8 +211,8 @@ button:hover {
 a b,
 a strong,
 button {
-    background-color: var(--color);
-    border: 2px solid var(--color);
+    background-color: #2b2d42;
+    border: 2px solid #d99ae;
     color: var(--color-bg);
 }
 
@@ -272,7 +251,7 @@ form {
     text-align: var(--justify-normal);
 }
 
-form header {
+form .header {
     margin: 1.5rem 0;
     padding: 1.5rem 0;
 }
@@ -311,18 +290,20 @@ textarea:focus {
 
 /* Tables */
 table {
-    border: 1px solid var(--color-bg-secondary);
+    border: 0px solid var(--color-bg-secondary);
     border-radius: var(--border-radius);
     border-spacing: 0;
     overflow-x: scroll;
     overflow-y: hidden;
     padding: 0;
 }
+table * {
+    box-sizing: content-box;
+}
 
 table td,
 table th,
 table tr {
-    padding: 0.4rem 0.8rem;
     text-align: var(--justify-important);
 }
 
@@ -357,7 +338,7 @@ blockquote {
     text-align: var(--justify-important);
 }
 
-blockquote footer {
+blockquote .footer {
     color: var(--color-text-secondary);
     display: block;
     font-size: small;
